--- a/src/SeriesPeliculas/PeliculaVistaIndividual/PeliculaVistaIndividual.css
+++ b/src/SeriesPeliculas/PeliculaVistaIndividual/PeliculaVistaIndividual.css
@@ -3,13 +3,29 @@
 body {
     font-family: 'Merriweather', serif;
     font-size:40px;
+   
 }
+.imgportada {
+    height: 450px; width: 350px;
+  }
+  #visor{width:800px; height:600px; margin:0 auto;}
+  #botones{width:500px; height:60px;  margin:0 auto; text-align: center;justify-content: center;}
+  #cajamarcador{width:500px; height:60px;  margin:0 auto; font-size: 4em;}
+  .separador{clear:both;}
+  img {width:800px; height:600px;}
+  .imgflecha {width:60px; height:40px;}
+
 
 *{
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
 }
+
+.bolder {
+    font-weight: bold;
+}
+
 
 
 
