añado un home y muchas mas cosas

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,8 +1,10 @@
-footer {
-    background-color: black;
-    position: absolute;
+
+.main {
     width: 100%;
-    height: 40px;
-    color: white;
-    margin-top:50px;
-  }
+	height: 200px;
+	background: #333;
+	border-top: 1px solid rgb(192, 188, 188);
+	position: relative;
+	bottom: 0;
+	z-index: 1;
+ }
