--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,16 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Combo&family=Merriweather:wght@300&family=Qwitcher+Grypen:wght@700&family=Roboto+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Combo&family=Merriweather:wght@300&family=Qwitcher+Grypen:wght@700&family=Roboto+Condensed:wght@300&display=swap');
+
+
+
 
 body {
-    font-family: 'Merriweather', serif;
-    font-size:40px;
+  font-size:20px;
 }
 
 *{
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
+  font-family: 'Rubik', sans-serif;
+  font-size:30px;
 }
 
+.imagenactores {
+  width: 200px;
+  height: 300px;
+}
+
+.imgnoticia {
+  width:100%;
+}
+
+.contenedor{
+    position: relative;
+    display: inline-block;
+    text-align: left;
+
+}
+ 
+
+.centrado{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width:10%;
+    background-color:black;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
+    text-align:center;
+    color: white;
+}
+
+
+.centradonoticias{
+  position: absolute;
+  top: 75%;
+  left: 45%;
+  width:90%;
+  background-color:black;
+  transform: translate(-50%, -50%);
+  font-size: 25px;
+  text-align:center;
+  color: white;
+}
 
 
 .row > p > a{
