--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Combo&family=Merriweather:wght@300&family=Qwitcher+Grypen:wght@700&family=Roboto+Condensed:wght@300&display=swap');
+
+*{font-family: 'Rubik', sans-serif; font-size:20px;}
+
+body{color:black;  background-color: black;}
+
 .App {
   text-align: center;
 }
