--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -21,6 +21,10 @@ body {
   height: 300px;
 }
 
+.imagenactores:hover {
+  box-shadow: 3px 3px rgb(87, 85, 85); cursor: pointer;
+}
+
 .imgnoticia {
   width:100%;
 }
