--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,6 +1,8 @@
 
 a {cursor: pointer;}
 
+.imglogo{width: 300px;height: 300px;text-align: center;margin-left: 150%;}
+
 .main {
     width: 100%;
 	height: 200px;
@@ -14,7 +16,7 @@ a {cursor: pointer;}
  
 .mainaboutus {
     width: 100%;
-	height: 800px;
+	height: 1000px;
 	border-top: 1px solid rgb(192, 188, 188);
 	position: relative;
 	bottom: 0;
